--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href='https://api.mapbox.com/mapbox-assembly/mbx/v0.18.0/assembly.min.css' rel='stylesheet'>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="../src/index.css"
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
